# cppad_mixed

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  batch_edit.sed  cppad_mixed.xrst  dev.omh  dev.xrst  doc.omh  doc.xrst  example_install.err  index.html  omh2xrst.tmp  readme.md  temp  typos.toml  uninstall.cmake.in  xrst.toml
bug/: eigen_sparse.sh
cholesky/: CMakeLists.txt  cholesky.cpp  sparse_ad_cholesky.cpp  sparse_ad_cholesky.hpp
cholesky/example/: sparse_ad_chol_eq.cpp  sparse_ad_chol_eval.cpp  sparse_ad_chol_perm.cpp  sparse_ad_chol_sp1.cpp  sparse_ad_chol_sp2.cpp  sparse_ad_chol_var.cpp
cmake/: add_to_set.cmake  find_cholmod.cmake
doc/: __contents_htm.js  __external_htm.js  __index_htm.js  __reference_htm.js  __search_htm.js  _abs_density.cpp_htm.js  _ar1_xam.cpp_htm.js  _ar1_xam.sh_htm.js  _base_class_htm.js  _capture_xam.cpp_htm.js  _capture_xam.sh_htm.js  _check_install.sh_htm.js  _check_user_ran_hes_htm.js  _check_user_ran_jac_htm.js  _childtable_ar1_xam.cpp_htm.js  (+539 more)
example/: CMakeLists.txt  cholmod_solve2_xam.cpp  cholmod_tst.cpp  cholmod_xam.cpp  example.cpp  ipopt_run.cpp  ipopt_xam.omh  ipopt_xam.xrst  ipopt_xam_run.cpp
example/private/: box_newton_xam.cpp  cholmod_factor.cpp  cholmod_solve.cpp  cholmod_solve2_a.cpp  cholmod_solve2_a_xam.cpp  cholmod_solve2_sim.cpp  cholmod_solve2_sim_xam.cpp  cholmod_solve2_xam.cpp  cholmod_solve_xam.cpp  cholmod_xam.cpp  constraint_eval_xam.cpp  constraint_hes_xam.cpp  constraint_jac_xam.cpp  eigen.cpp  eigen_xam.cpp  fix_con_eval.cpp  fix_con_eval_xam.cpp  fix_con_hes.cpp  fix_con_hes_xam.cpp  fix_con_jac.cpp  fix_con_jac_xam.cpp  fix_constraint_eval_xam.cpp  fix_constraint_hes_xam.cpp  fix_constraint_jac_xam.cpp  fix_like_eval.cpp  fix_like_eval_xam.cpp  fix_like_hes.cpp  fix_like_hes_xam.cpp  fix_like_jac.cpp  fix_like_jac_xam.cpp  fix_likelihood_eval_xam.cpp  fix_likelihood_hes_xam.cpp  fix_likelihood_jac_xam.cpp  hes_cross.cpp  hes_cross_xam.cpp  hes_ran_fun_xam.cpp  laplace_obj_hes.cpp  ldlt_cholmod.cpp  ldlt_cholmod_xam.cpp  ldlt_eigen.cpp  (+61 more)
example/user/: abs_density.cpp  abs_density_xam.cpp  auto_regressive_xam.cpp  box_newton_xam.cpp  constraint_xam.cpp  data_mismatch.cpp  data_mismatch_xam.cpp  derived_ctor.cpp  derived_ctor_xam.cpp  derived_xam.cpp  fix_constraint.cpp  fix_constraint_xam.cpp  fix_likelihood.cpp  fix_likelihood_xam.cpp  hes_fixed_obj.cpp  hes_random_obj.cpp  information_mat.cpp  information_mat_xam.cpp  lasso.cpp  lasso_xam.cpp  ldlt_rcond.xrst  manage_gsl_rng.cpp  manage_gsl_rng_xam.cpp  mixed_constraint_xam.cpp  mixed_derived_xam.cpp  no_random.cpp  no_random_xam.cpp  opt_ran_nan.cpp  optimize_fixed.cpp  optimize_fixed_xam.cpp  optimize_random.cpp  optimize_random_xam.cpp  ran_constraint.cpp  ran_constraint_xam.cpp  ran_likelihood.cpp  ran_likelihood_hes.cpp  ran_likelihood_hes_xam.cpp  ran_likelihood_jac.cpp  ran_likelihood_jac_xam.cpp  ran_likelihood_xam.cpp  (+9 more)
html/: .buildinfo  (+76 more)
pkgconfig/: CMakeLists.txt  cppad_mixed-uninstalled.pc.in  cppad_mixed.pc.in
speed/: CMakeLists.txt  ar1_xam.cpp  capture_xam.cpp  speed.omh  speed.xrst
src/: CMakeLists.txt  box_newton.cpp  chol_hes_ran.cpp  constraint.omh  constraint_eval.cpp  constraint_hes.cpp  constraint_jac.cpp  derived_ctor.cpp  derived_ctor.omh  fix_con_eval.cpp  fix_con_hes.cpp  fix_con_jac.cpp  fix_constraint.omh  fix_constraint.xrst  fix_constraint_eval.cpp  fix_constraint_hes.cpp  fix_constraint_jac.cpp  fix_like.omh  fix_like_eval.cpp  fix_like_hes.cpp  fix_like_jac.cpp  fix_likelihood.omh  fix_likelihood.xrst  fix_likelihood_eval.cpp  fix_likelihood_hes.cpp  fix_likelihood_jac.cpp  init_chol_ran_hes.cpp  init_constraint.cpp  init_fix_con.cpp  init_fix_constraint.cpp  init_fix_like.cpp  init_fix_likelihood.cpp  init_hes_cross.cpp  init_hes_ran.cpp  init_hes_ran_obj.cpp  init_hes_ranobj.cpp  init_laplace_obj.cpp  init_laplace_obj_fun.cpp  init_laplace_obj_hes.cpp  init_ldlt_ran_hes.cpp  (+48 more)
src/cholmod/: constructor.cpp  init.cpp  inv.cpp  logdet.cpp  pattern.cpp  rcond.cpp  sim_cov.cpp  solve.cpp  solve2.cpp  solve_H.cpp  sparseinv.cpp  update.cpp
src/eigen/: CMakeLists.txt  chol_hes_ran.cpp  choleig.cpp  cholesky.cpp  hes_fixed_obj.cpp  hes_random_obj.cpp  information_mat.cpp  init_hes_ran.cpp  init_ran_con.cpp  init_ran_hes.cpp  init_ran_obj.cpp  init_ran_objcon.cpp  ldlt_eigen.cpp  ldlt_inv.cpp  logdet_jac.cpp  newton_step.cpp  order2random.cpp  ran_con_eval.cpp  ran_con_jac.cpp  ran_obj_eval.cpp  ran_obj_jac.cpp  sample_conditional.cpp  sample_fixed.cpp  sample_implicit.cpp  sample_random.cpp  sparse_ad_cholesky.cpp  sparse_low_tri_sol.cpp  sparse_up_tri_sol.cpp  undetermined.cpp  update_factor.cpp
src/ipopt_fixed/: adapt_derivative_chk.cpp  adaptive_derivative_check.cpp  ctor.cpp  eval_f.cpp  eval_g.cpp  eval_grad_f.cpp  eval_h.cpp  eval_jac_g.cpp  finalize_solution.cpp  fixed_eq_constrain.cpp  get_bounds_info.cpp  get_nlp_info.cpp  get_scaling_parameters.cpp  get_starting_point.cpp  intermediate_callback.cpp  new_random.cpp  one_dim_function.cpp  set_scaling.cpp
src/ipopt_random/: ctor.cpp  eval_f.cpp  eval_g.cpp  eval_grad_f.cpp  eval_h.cpp  eval_jac_g.cpp  finalize_solution.cpp  get_bounds_info.cpp  get_nlp_info.cpp  get_starting_point.cpp
test/: CMakeLists.txt  binomial.cpp  delta_ranobj.cpp  der_var_hes.cpp  test.cpp  zero_random_one.cpp  zero_random_two.cpp
test_more/: CMakeLists.txt  abs_fix_con.cpp  ad_cholesky.cpp  binomial.cpp  box_newton.cpp  check_derivative.cpp  check_grad.cpp  cholmod_solve2.cpp  delta_ran_obj.cpp  delta_ranobj.cpp  der_var_hes.cpp  finalize.cpp  fixed_eq_constrain.cpp  fixed_lag.cpp  laplace_obj_fun.cpp  laplace_obj_hes.cpp  laplace_obj_tst.cpp  ldlt_cholmod.cpp  max_iter_neg.cpp  max_iter_zero.cpp  n_mixture.cpp  no_fix_likelihood.cpp  no_random.cpp  no_random_info.cpp  opt_ran_fail.cpp  ran_likelihood_hes.cpp  ran_likelihood_jac.cpp  ran_obj_tst.cpp  ran_objcon_hes.cpp  sample_fixed.cpp  sample_fixed_1.cpp  sample_fixed_2.cpp  scale.cpp  scale_one.cpp  scale_two.cpp  solution_check.cpp  sparse_ad_cholesky.cpp  test_more.cpp  zero_random_one.cpp  zero_random_two.cpp
(+202 files in other folders)
